--- a/web/index.html
+++ b/web/index.html
@@ -2,13 +2,17 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <link rel = "stylesheet" href = "stylesheets/main.css">
+    
+    <script src="./js/vendor/jquery-1.10.2.min.js"></script>
+    <script src="./js/main.js"></script>
 </head>
 <body>
 <div></div>
 <section>
- <header>
+ <header class = "section-header">
      <h2>IT CO-WORK</h2>
-     <ul>
+     <ul class = "nav">
          <li><a href="#home">Home</a></li>
          <li><a href="#info">About us</a></li>
          <li><a href="#projects">Projects</a></li>
@@ -18,6 +22,8 @@
  </header>
  <div class = "section-body">
      <section class = "tabs-panel" id = "home">
+         <h2 class="maxim">Do creative with you</h2>
+         <img class="doors" src="../images/door-close.jpg">
          
      </section>
      <section class = "tabs-panel" id = "info">
