--- a/web/index.html
+++ b/web/index.html
@@ -21,23 +21,15 @@
      </ul>
  </header>
  <div class = "section-body">
-     <section class = "tabs-panel" id = "home">
+     <section class = "tabs-panel" id = "ground" >
          <h2 class="maxim">Do creative with you</h2>
          <img class="doors" src="../images/door-close.jpg">
+         <img class="arrow" src="../images/arrow.jpg" width="180px" height="70px">
          
      </section>
-     <section class = "tabs-panel" id = "info">
-
-     </section>
-     <section class = "tabs-panel" id = "projects">
-
-     </section>
-     <section class = "tabs-panel" id = "events">
-
-     </section>
-     <section class = "tabs-panel" id = "contact">
-
-     </section>
+     <div id = "home">
+         <h1>About us</h1>
+     </div>
  </div>
 
 </section>
