add contact contents

--- a/web/index.html
+++ b/web/index.html
@@ -28,7 +28,31 @@
          
      </section>
      <div id = "home">
-         <h1>About us</h1>
+         <h1>Home</h1>
+     </div>
+     
+     <div id="info">
+         <h2>About us</h2>
+     </div>
+
+     <div id="projects">
+         <h2>Projects</h2>
+     </div>
+
+     <div id="events">
+         <h2>Events</h2>
+     </div>
+
+     <div id="contact">
+         <h2>Contact</h2>
+         <p>
+             何かご用などありましたら下記の連絡先までお問い合わせください。
+         </p>
+         <table align="center"> 
+             <tr><th>Gmail:</th><td><a href="mailto:1284coworking@gmail.com">1284coworking@gmail.com</a></td></tr>
+             <tr><th>Twitter:</th><td><a href="https://twitter.com/1284cowork">@1284cowork</a></td></tr>
+         </table>
+
      </div>
  </div>
 
